--- a/first.html
+++ b/first.html
@@ -161,7 +161,7 @@
         <p>AyurSphere is a holistic platform offering a complete range of Ayurvedic solutions for health and wellness. Rooted in ancient traditions, it blends natural remedies and modern tools to promote balance and vitality. From herbal care to personalized guidance, AyurSphere empowers individuals to embrace Ayurveda’s transformative power for a harmonious and healthy life.</p>
         <div class="button-container">
             <button onclick="location.href='herbal_plants.html'">Herbal Plants</button>
-            <button onclick="location.href='data.html'">Symptom Checker</button>
+            <button onclick="location.href='symptom_checker.html'">Symptom Checker</button>
             <button onclick="location.href='diagnosis.html'">Diagnosis</button>
             <button onclick="location.href='prescription.html'">Prescription</button>
             <button onclick="location.href='bmi_checker.html'">BMI Checker</button>
