--- a/e-commerce.html
+++ b/e-commerce.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanjivani E-Commerce - Best Health Remedies</title>
+    <title>E-Commerce - Best Health Remedies</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         /* Global Styles */
